--- a/map.html
+++ b/map.html
@@ -26,7 +26,7 @@
     </div>
     <!-- depart button -->
     <div class = "animated fadeInLeftBig" id= "depart">
-      <a href="machu_picchu.html"><img src="images/Depart.png" alt="Depart"></a>
+      <a href="machu_picchu.html"><img src="images/depart.png" alt="Depart"></a>
     </div>
     <!-- Google API Map -->
     <div id="map"></div>
